add_task_service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: addservice
spec: 
  ports:  
  - port: 80
    targetPort: 8000
  selector: 
    app: addtask
  type: ClusterIP
